Added dokcer compose file

--- a/cleaningService/.env
+++ b/cleaningService/.env
@@ -1,4 +1,4 @@
-DB_HOST=localhost
-DB_USER=Andreas_Brandenborg
-DB_PASSWORD=Jhgd2sptm
-DB_NAME=hotel_arthur
+DB_HOST=kongarthurhotel-kongarthurhotel.e.aivencloud.com
+DB_USER=app
+DB_PASSWORD=Ridder
+DB_NAME=hotel_kong_arthur
