--- a/roomSchedulingService/requirements.txt
+++ b/roomSchedulingService/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 PyMySQL==1.0.3
 python-dotenv==1.2.1
+mysql-connector-python==8.1.0
 requests==2.32.5
 urllib3==2.5.0
 tzdata==2025.2
