--- a/roomSchedulingService/requirements.txt
+++ b/roomSchedulingService/requirements.txt
@@ -1,18 +1,18 @@
 blinker==1.9.0
-click==8.1.8
+certifi==2025.10.5
+charset-normalizer
+click
 colorama==0.4.6
 dotenv==0.9.9
-Faker==37.8.0
 Flask==3.1.2
 Flask-MySQLdb==2.0.0
 idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
-MarkupSafe==3.0.2
-PyMySQL==1.0.3
+MarkupSafe==3.0.3
+mysql-connector-python
+mysqlclient==2.2.7
 python-dotenv==1.2.1
-mysql-connector-python==8.1.0
 requests==2.32.5
 urllib3==2.5.0
-tzdata==2025.2
 Werkzeug==3.1.3
